--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
@@ -21,5 +23,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@salesforce-ux/design-system": "^2.8.3",
+    "@salesforce/design-system-react": "^0.9.5",
+    "classnames": "^2.2.6",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1"
+  }
 }
