--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@salesforce/design-system-react": "^0.9.5",
     "classnames": "^2.2.6",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0"
   }
 }
