more descriptive comments

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://donnieberg.github.io/content-builder",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "lodash.uniqby": "^4.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
